--- a/django_playground/uicCourse/course/templates/course/detail_edit.html
+++ b/django_playground/uicCourse/course/templates/course/detail_edit.html
@@ -40,6 +40,7 @@
     <div class="card">
       <div class="card-header text-white bg-dark">Course Edit: {{ coursedata.course_code | upper }}</div>
       <form action="{% url 'course_edit_submit' %}" method="post">
+          {% csrf_token %}
       <div class="card-body ">
           <div class="form-group">
         <input type="text" class="form-control" value="{{ coursedata.course_name_en }}" name="cne">
